fix the multiple issue of TimeZone and file save issue on local machine